result elements shouldn't be visible at start. fixed.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,6 +89,7 @@ a {
 
 /*-----results------*/
 #results { 
+	display: none;
     margin-top: 10px;
 }
 
